--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,7 +138,7 @@
         app:layout_constraintStart_toEndOf="@+id/button"
         tools:layout_editor_absoluteY="158dp" />-->
 
-    <TextView
+  <!--  <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/view_hide1"
@@ -159,7 +159,7 @@
         app:layout_constraintLeft_toRightOf="@+id/view_hide1"
         app:layout_constraintRight_toRightOf="parent"
 
-        />
+        />-->
 
     <!-- app:layout_constraint{X}_to{Y}Of="{Z}"
         X - это какой-то constraint привязываемой view
