--- a/app/src/main/res/layout/activity_come_back.xml
+++ b/app/src/main/res/layout/activity_come_back.xml
@@ -6,4 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".ComeBackActivity">
 
+    <EditText
+        android:id="@+id/backtv"
+        android:layout_width="215dp"
+        android:layout_height="129dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/sendback"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/backtv"
+        app:layout_constraintStart_toStartOf="@+id/backtv"
+        app:layout_constraintTop_toBottomOf="@+id/backtv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
