--- a/app/src/main/res/layout/second_layout.xml
+++ b/app/src/main/res/layout/second_layout.xml
@@ -121,7 +121,8 @@
         <EditText
             android:id="@+id/et"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="64dp"
+            android:hint="@string/app_name" />
 
         <Button
             android:id="@+id/button"
